# t1-touchbar

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml  uninstall.sh
apple-ib-drv/: README.md  apple-ibridge.c  apple-touchbar.c  dkms.conf  t1-kernel7-fixes.applied.patch
apple-ib-drv/packaging/: 99-ibridge.rules  apple-touchbar.modprobe.conf  apple-touchbar.modules-load.conf
configs/: default.json  scenes-default.json  scenes-showcase.json
docs/: COORDINATION-archive.md  COORDINATION.md  DESIGNER-KICKOFF-PROMPT.md  DEVGUIDE.md  HANDOFF-SCENES-REBUILD.md  HARDWARE-FRAME-PUSH-REFERENCE.md  PROTOCOL.md  ROADMAP.md  SCENES-PHASE1-NOTES.md  STUDIO-CONCEPT-BRIEF.md  STUDIO-DESIGN-BRIEF.md
docs/design-scenes/: concept.dc.html
examples/: buttons.py  reactive_ripples.py  scroll.py
packaging/: 70-t1touchbar-camera.rules  99-t1touchbar.rules  install-service.sh  switch-engine.sh  t1bar-scenes.service  t1bar-studio.desktop  t1bar.service  t1touchbar-camera.service  t1touchbar-strip.service  uninstall-service.sh
src/t1bar_studio/: __init__.py  __main__.py  actions.py  compose.py  config.py  context.py  convert.py  editor.py  editor_gtk.py  icons.py  model.py  render.py  runtime.py  scene_app.py
src/t1bar_studio/editor_static/: index.html
src/t1touchbar/: __init__.py  __main__.py  camera.py  client.py  device.py  geometry.py  protocol.py  server.py  touch.py
src/t1touchbar_strip/: __init__.py  __main__.py  actions.py  app.py  icons.py  keys.py  layout.py  media.py  render.py  welcome.py
studio/: README.md  pyproject.toml
studio/configs/: default.json  scenes-default.json
studio/docs/: HANDOFF-SCENES-REBUILD.md  HARDWARE-FRAME-PUSH-REFERENCE.md  SCENES-PHASE2-NOTES.md
studio/docs/design-scenes/: CONCEPT-README.md  Scene Editor.html
studio/packaging/: uninstall-service.sh
studio/src/t1bar_studio/: __main__.py  context.py  motion.py  runtime.py  scene_app.py  scene_runtime.py  scenes.py
